# jabberwocky

./: .gitignore  README.html  README.md  UPDATING.md  example.toml  pyproject.toml  wishlist.txt
.github/workflows/: python-app.yml  test.yml  windows-mirror-test.yml
docs/: cli.md  configuration.md  how-it-works.md
examples/: ai.in  apps.in  core.in  data.in  ml.in
jabberwocky/: __init__.py  __main__.py  build_mirror.py  cli.py  combine_requirements.py  config.py  downloader.py  generate_lockfile.py  generate_requirements.py  index.py  pypi.py  server.py  updater.py
test_offline/: main.py  pyproject.toml
tests/: test_config.py  test_generate_requirements.py  test_index.py  test_index_optimization.py  test_mirror_serve.py  test_pypi.py  test_security.py  test_server.py
