[project]
name = "jabberwocky"
version = "0.1.0"
description = "Partial Python package mirror builder"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "packaging>=26.0",
    "starlette>=0.52.1",
    "tomli-w>=1.2.0",
    "uvicorn>=0.41.0",
    "click>=8.3",
]

[project.scripts]
jabberwocky = "jabberwocky.cli:cli"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "starlette>=0.52.1",
]
