[project]
name = "jabberwocky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
package = true

[project.scripts]
jabberwocky = "jabberwocky.__main__:main"

[tool.setuptools.packages.find]
include = ["jabberwocky*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
